--- a/learn-certs-pr/azure-for-sap-workloads-specialty/index.yml
+++ b/learn-certs-pr/azure-for-sap-workloads-specialty/index.yml
@@ -2,28 +2,27 @@
 title: 'Microsoft Certified: Azure for SAP Workloads Specialty'
 metadata:
   title: 'Microsoft Certified:  Azure for SAP Workloads Specialty'
-  description: Архитекторы или инженеры Microsoft Azure для рабочих нагрузок SAP обладают обширным опытом и знаниями в области системного ландшафта SAP и отраслевых стандартах, которые характерны для долгосрочной работы решения SAP в Azure.
+  description: Кандидаты на этот экзамен должны быть архитекторами или инженерами с солидными соответствующими знаниями и большим опытом работы c системным ландшафтом SAP и отраслевыми стандартами в отношении первоначальной миграции или интеграции и долгосрочной работы решения SAP в Microsoft Azure.
 uid: certification.azure-for-sap-workloads-specialty
 iconUrl: /media/learn/certification/badges/microsoft-certified-specialty-badge.svg
 summary: |-
-  Кандидатами на специальную сертификацию Azure for SAP Workloads должны быть архитекторы или инженеры, обладающие обширным опытом и знаниями системного ландшафта SAP и отраслевых стандартов, характерных для долгосрочной работы решения SAP в Microsoft Azure.
+  Кандидаты на этот экзамен должны быть архитекторами или инженерами с солидными соответствующими знаниями и большим опытом работы c системным ландшафтом SAP и отраслевыми стандартами в отношении первоначальной миграции или интеграции и долгосрочной работы решения SAP в Microsoft Azure.
 
-  Обязанности этой роли включают предоставление рекомендаций по услугам и корректировку ресурсов в зависимости от ситуации для оптимальной отказоустойчивости, производительности, масштаба, обеспечения, размерности и мониторинга.
+  Обязанности архитектора или инженера, отвечающего за рабочие нагрузки SAP в Azure, включают предоставление рекомендаций в отношении служб и настройки ресурсов для оптимальной устойчивости, производительности, масштаба, обеспечения, размера и мониторинга.
 
-  Для реализации решений архитекторы или инженеры Azure по рабочим нагрузкам SAP сотрудничают с облачными администраторами, облачными администраторами баз данных и непосредственно клиентами.
+  Для реализации решений архитекторы и инженеры, отвечающие за рабочие нагрузки SAP в Azure, сотрудничают с администраторами cloud, администраторами баз данных cloud и клиентами.
 
-  Кандидат на эту сертификацию должен иметь большой опыт и знания приложений SAP&#58; SAP HANA, S/4HANA, SAP NetWeaver, SAP BW/4HANA, серверы ОС для приложений и баз данных SAP, портал Azure, шаблоны ARM, операционные системы, виртуализация, облачная инфраструктура, структуры хранения, разработка высокой доступности, проект аварийного восстановления, принципы защиты данных, работа в сети.
+  Кандидат на этот экзамен должен обладать солидными знаниями и большим опытом работы с приложениями SAP&#58; SAP HANA, S/4HANA, SAP NetWeaver, SAP BW/4HANA, серверами OS для приложений и баз данных SAP, порталом Azure, Azure Marketplace, шаблонами Azure Resource Manager (шаблонами ARM), виртуализацией, инфраструктурой cloud, структурами хранения, разработкой высокой доступности, разработкой аварийного восстановления и сетями.
 
-  Для этой роли настоятельно рекомендуется иметь сертификат Azure Administrator Associate или Azure Solutions Architect Expert в дополнение к сертификатам SAP HANA и Linux.
-subTitle: Архитекторы или инженеры Microsoft Azure для рабочих нагрузок SAP обладают обширным опытом и знаниями в области системного ландшафта SAP и отраслевых стандартах, которые характерны для долгосрочной работы решения SAP в Azure.
+  Для этого экзамена мы настоятельно рекомендуем пройти сертификацию Azure Administrator Associate или Azure Solutions Architect Expert в дополнение к сертификациям SAP.
+subTitle: Кандидаты на этот экзамен должны быть архитекторами или инженерами с солидными соответствующими знаниями и большим опытом работы c системным ландшафтом SAP и отраслевыми стандартами в отношении первоначальной миграции или интеграции и долгосрочной работы решения SAP в Microsoft Azure.
 levels:
 - advanced
 skills:
 - Перенос SAP Workloads в Azure
-- Разработка решения Azure для поддержки SAP Workloads
-- Построение и развертывание для Azure SAP Workloads
-- Проверка инфраструктуры Azure для SAP Workloads
-- Ввод в эксплуатацию архитектуры Azure SAP
+- Разрабатывать и реализовывать инфраструктуру для поддержки рабочих нагрузок SAP
+- Разрабатывать и реализовывать High Availability и Disaster Recovery (HA/DR)
+- Поддерживать рабочие нагрузки SAP в Azure
 roles:
 - administrator
 - solution-architect
