--- a/learn-certs-pr/courses/az-104t00.yml
+++ b/learn-certs-pr/courses/az-104t00.yml
@@ -80,17 +80,16 @@ outlineSection: |-
   В этом модуле вы узнаете об инструментах, которые администратор Azure использует для управления своей инфраструктурой. К ним относятся шаблоны Azure Portal, Cloud Shell, Azure PowerShell, CLI и Resource Manager. Этот модуль включает в себя&#58;
   #### Уроки
   - Azure Resource Manager
-  - Azure Portal и Cloud Shell
-  - Azure PowerShell и CLI
-  - ARM шаблоны
+  - Azure Administrator Tools
+  - Шаблоны ARM
 
-  #### Лабораторная работа&#58; Управление ресурсами Azure с помощью Azure Portal
+  #### Лабораторная работа : управление ресурсами Azure с использованием шаблонов ARM
 
-  #### Лабораторная работа&#58; Управление ресурсами Azure с помощью шаблонов ARM
+  #### Лабораторная работа : управление ресурсами Azure с использованием шаблонов Azure PowerShell (необязательно)
 
-  #### Лабораторная работа&#58; управление ресурсами Azure с помощью Azure PowerShell (необязательно)
+  #### Лабораторная работа : управление ресурсами Azure с использованием Azure CLI (необязательно)
 
-  #### Лабораторная работа&#58; управление ресурсами Azure с помощью Azure CLI (необязательно)
+  #### Лабораторная работа : управление ресурсами Azure с использованием Azure Portal
 
   После завершения этого модуля студенты смогут следующее&#58; 
   - Использование Azure Resource Manager для организации ресурсов
@@ -103,7 +102,6 @@ outlineSection: |-
   В этом модуле вы узнаете об основных концепциях виртуальных сетей, таких как виртуальные сети и подсети, IP-адресация, группы безопасности сети, брандмауэр Azure и Azure DNS.
   #### Уроки
   - Виртуальные сети
-  - IP-адресация
   - Группы безопасности сети
   - Брандмауэр Azure
   - Azure DNS
@@ -112,7 +110,6 @@ outlineSection: |-
 
   После завершения этого модуля студенты смогут следующее&#58; 
   - Реализация виртуальных сетей и подсетей
-  - Настройка публичной и частной IP-адресации
   - Настройка группы безопасности сети
   - Настройка брандмауэра Azure
   - Настройка частных и публичных зон DNS
@@ -192,11 +189,13 @@ outlineSection: |-
   - Служба контейнеров
   - Служба Azure Kubernetes
 
-  #### Лабораторная работа&#58; Внедрение веб-приложений
+  #### Лабораторная работа : Внедрение веб-приложений
 
-  #### Лабораторная работа&#58; Внедрение экземпляров контейнера Azure
+  #### Лабораторная работа : реализация Azure Kubernetes Service
 
-  #### Лабораторная работа&#58; внедрение службы Azure Kubernetes
+  ####
+
+  #### Лабораторная работа : реализация Azure Container Instances
 
   После завершения этого модуля студенты смогут следующее&#58; 
   - Создание плана обслуживания приложения
