--- a/learn-certs-pr/exams/az-120.yml
+++ b/learn-certs-pr/exams/az-120.yml
@@ -7,19 +7,19 @@ uid: exam.az-120
 displayName: AZ-120
 summary: |-
   <div>
-  <div><font color='red'><strong>Содержание этого экзамена будет обновлено 28 мая 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Содержание этого экзамена было обновлено 28 мая 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
   </div>
   
-  Кандидатами на этот экзамен должны быть архитекторами или инженерами с большим опытом и знаниями системного ландшафта SAP и отраслевых стандартов, которые характерны для долгосрочной работы решения SAP в Microsoft Azure.
-  
-  Обязанности архитектора или инженера для рабочих нагрузок Azure включают предоставление рекомендаций по услугам и настройку ресурсов в зависимости от оптимальной отказоустойчивости, производительности, масштаба, обеспечения, размерности и мониторинга.
-  
-  Для реализации решений архитекторы или инженеры Azure по рабочим нагрузкам SAP сотрудничают с облачными администраторами, облачными администраторами баз данных и непосредственно клиентами.
-  
-  Кандидат на этот экзамен должен иметь большой опыт и знания приложений SAP&#58; SAP HANA, S/4HANA, SAP NetWeaver, SAP BW/4HANA, серверы ОС для приложений и баз данных SAP, портал Azure, шаблоны ARM, операционные системы, виртуализация, облачная инфраструктура, структуры хранения, разработка высокой доступности, проект аварийного восстановления, принципы защиты данных, работа в сети.
-  
-  Для сдачи этого экзамена настоятельно рекомендуется иметь сертификат Azure Administrator Associate или Azure Solutions Architect Expert, а также сертификаты SAP HANA и Linux.
-subTitle: 'Этот экзамен оценивает вашу способность выполнять следующие технические задачи: перенос рабочих нагрузок SAP в Azure; разработка решений Azure для поддержки рабочих нагрузок SAP; создание и развертывание рабочих нагрузок Azure SAP; проверка инфраструктуры Azure для рабочих нагрузок SAP; внедрение архитектуры Azure SAP.'
+  Кандидаты на этот экзамен должны быть архитекторами или инженерами с солидными соответствующими знаниями и большим опытом работы c системным ландшафтом SAP и отраслевыми стандартами в отношении первоначальной миграции или интеграции и долгосрочной работы решения SAP в Microsoft Azure.
+
+  Обязанности архитектора или инженера, отвечающего за рабочие нагрузки SAP в Azure, включают предоставление рекомендаций в отношении служб и настройки ресурсов для оптимальной устойчивости, производительности, масштаба, обеспечения, размера и мониторинга.
+
+  Для реализации решений архитекторы и инженеры, отвечающие за рабочие нагрузки SAP в Azure, сотрудничают с администраторами cloud, администраторами баз данных cloud и клиентами.
+
+  Кандидат на этот экзамен должен обладать солидными знаниями и большим опытом работы с приложениями SAP&#58; SAP HANA, S/4HANA, SAP NetWeaver, SAP BW/4HANA, серверами OS для приложений и баз данных SAP, порталом Azure, Azure Marketplace, шаблонами Azure Resource Manager (шаблонами ARM), виртуализацией, инфраструктурой cloud, структурами хранения, разработкой высокой доступности, разработкой аварийного восстановления и сетями.
+
+  Для этого экзамена мы настоятельно рекомендуем пройти сертификацию Azure Administrator Associate или Azure Solutions Architect Expert в дополнение к сертификациям SAP.
+subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: переносить рабочие нагрузки SAP в Azure; разрабатывать и реализовывать инфраструктуру для поддержки рабочих нагрузок SAP; разрабатывать и реализовывать High Availability и Disaster Recovery; поддерживать рабочие нагрузки SAP в Azure.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43XOu
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-120&examname=Exam%20AZ-120:%20Planning%20and%20Administering%20Microsoft%20Azure%20for%20SAP%20Workloads&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-120
@@ -31,12 +31,11 @@ locales:
 levels:
 - advanced
 skills:
-- Содержание этого экзамена будет обновлено 28 мая 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
-- Перенос SAP Workloads в Azure (10-15%)
-- Разработка решения Azure для поддержки SAP Workloads (20-25%)
-- Построение и развертывание для Azure SAP Workloads (35-40%)
-- Проверка инфраструктуры Azure для SAP Workloads (10-15%)
-- Ввод в эксплуатацию архитектуры Azure SAP (10-15%)
+- Содержание этого экзамена было обновлено 28 мая 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
+- Перенос SAP Workloads в Azure (25–30%)
+- Разрабатывать и реализовывать инфраструктуру для поддержки рабочих нагрузок SAP (25–30%)
+- Разрабатывать и реализовывать High Availability и Disaster Recovery (HA/DR) (20–25%)
+- Поддерживать рабочие нагрузки SAP в Azure (15–20%)
 roles:
 - solution-architect
 - devops-engineer
