--- a/learn-certs-pr/exams/az-220.yml
+++ b/learn-certs-pr/exams/az-220.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.az-220
 displayName: AZ-220
 summary: |-
-  <div><font color='red'><strong>Содержание этого экзамена будет обновлено 25 мая 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Содержание этого экзамена было обновлено 25 мая 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
   
   Разработчик Azure IoT реализует настройку и выполняет задачи по кодированию, необходимые для создания и поддержки части cloud и пограничной части решения IoT. В дополнение к настройке и поддержке устройств с использованием служб cloud разработчик IoT также настраивает физические устройства. Разработчик IoT отвечает за ведение и устранение проблем конфигурации устройств на протяжении всего их жизненного цикла.
   
@@ -26,7 +26,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 25 мая 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
+- Содержание этого экзамена было обновлено 25 мая 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
 - Настройка инфраструктуры решения IoT (10-15%)
 - Подготовка к работе устройств и управление ими (15-20%)
 - Реализация IoT Edge (15-20%)
