--- a/learn-certs-pr/exams/az-304.yml
+++ b/learn-certs-pr/exams/az-304.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.az-304
 displayName: AZ-304
 summary: |-
-  <div><font color='red'><strong>Содержание этого экзамена будет обновлено 25 мая 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Содержание этого экзамена было обновлено 25 мая 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
   
   Кандидаты на этот экзамен должны обладать специальными знаниями в области разработки и внедрения решений, работающих в Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранилище и безопасность. У кандидатов должны быть навыки среднего уровня по администрированию Azure. Кандидаты должны понимать разработку в Azure и процессы DevOps.
   
@@ -28,7 +28,7 @@ locales:
 levels:
 - advanced
 skills:
-- Содержание этого экзамена будет обновлено 25 мая 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
+- Содержание этого экзамена было обновлено 25 мая 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
 - Проектирование мониторинга (10-15%)
 - Проектирование удостоверений и безопасности (25-30%)
 - Разработка хранилища данных (15-20%)
