--- a/learn-certs-pr/exams/ms-101.yml
+++ b/learn-certs-pr/exams/ms-101.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.ms-101
 displayName: MS-101
 summary: |-
-  <div><font color='red'><strong>Содержание этого экзамена будет обновлено 25 мая 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Содержание этого экзамена было обновлено 25 мая 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
   
   Кандидатами на этот экзамен являются сертифицированные администраторы Microsoft 365 Enterprise, которые участвуют в оценке, планировании, переносе, развертывании и управлении службами Microsoft 365. Они выполняют задачи по управлению арендой в Microsoft 365 для организаций, в том числе управление идентификациями, безопасностью, соответствием стандартам и поддержкой технологий.
   
@@ -22,7 +22,7 @@ locales:
 levels:
 - advanced
 skills:
-- Содержание этого экзамена будет обновлено 25 мая 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
+- Содержание этого экзамена было обновлено 25 мая 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
 - Внедрение служб современных устройств (40-45%)
 - Внедрение функций безопасности Microsoft 365 и управления угрозами (20-25%)
 - Управление инструментами корпоративного управления и соответствия Microsoft 365 (35-40%)
