--- a/learn-certs-pr/exams/ms-600.yml
+++ b/learn-certs-pr/exams/ms-600.yml
@@ -7,7 +7,7 @@ uid: exam.ms-600
 displayName: MS-600
 summary: |-
   <div>
-  <div><font color='red'><strong>В представленном ниже руководстве по экзамену отражены изменения, которые вступят в силу 25 мая 2021 года.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Содержание этого экзамена было обновлено 25 мая 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
   </div>
   
   Кандидатами на этот экзамен являются Microsoft 365 Developers [разработчики Microsoft 365], которые проектируют, создают, тестируют и поддерживают приложения и решения, оптимизированные для обеспечения потребностей организаций, использующих платформу Microsoft 365, в продуктивности и совместной работе.
@@ -29,7 +29,7 @@ locales:
 levels:
 - intermediate
 skills:
-- В представленном ниже руководстве по экзамену отражены изменения, которые вступят в силу 25 мая 2021 года.
+- Содержание этого экзамена было обновлено 25 мая 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
 - Внедрение Microsoft Identity (20-25%)
 - Создание приложений с помощью Microsoft Graph (15-20%)
 - Расширение и настройка SharePoint (15-20%)
