--- a/learn-certs-pr/exams/ms-700.yml
+++ b/learn-certs-pr/exams/ms-700.yml
@@ -7,7 +7,7 @@ uid: exam.ms-700
 displayName: MS-700
 summary: |-
   <div>
-  <div><strong>В представленном ниже руководстве по экзамену отражены изменения, которые вступят в силу 25 мая 2021 года.</strong><br/><br/></div>
+  <div><strong>Содержание этого экзамена было обновлено 25 мая 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
   </div>
   
   Microsoft Teams Administrator [Администратор Microsoft Teams] настраивает, развертывает и управляет рабочими нагрузками Office 365 для Microsoft Teams, которые нацелены на эффективное и результативное сотрудничество и взаимодействие в корпоративной среде.
@@ -29,7 +29,7 @@ locales:
 levels:
 - intermediate
 skills:
-- В представленном ниже руководстве по экзамену отражены изменения, которые вступят в силу 25 мая 2021 года.
+- Содержание этого экзамена было обновлено 25 мая 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
 - Планирование и настройка среды для Microsoft Teams (45-50%)
 - Управление чатом, звонками и встречами (30-35%)
 - Управление политиками команд и приложений (20-25%)
