--- a/learn-certs-pr/exams/dp-300.yml
+++ b/learn-certs-pr/exams/dp-300.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.dp-300
 displayName: DP-300
 summary: |-
-  <div><font color='red'><strong>Содержание этого экзамена будет обновлено 25 мая 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Содержание этого экзамена было обновлено 25 мая 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
   
   Кандидатами на этот экзамен являются администраторы баз данных и специалисты по управлению данными, которые управляют локальными и облачными реляционными базами данных, созданными с помощью Microsoft SQL Server и Microsoft Azure Data Services.
   
@@ -30,7 +30,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 25 мая 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
+- Содержание этого экзамена было обновлено 25 мая 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
 - Планирование и реализация ресурсов платформы данных (15-20%)
 - Реализация безопасной среды (15-20%)
 - Мониторинг и оптимизация операционных ресурсов (15-20%)
