--- a/learn-certs-pr/exams/ms-100.yml
+++ b/learn-certs-pr/exams/ms-100.yml
@@ -7,10 +7,10 @@ uid: exam.ms-100
 displayName: MS-100
 summary: |-
   <div><font color='red'><strong>Содержание этого экзамена было обновлено 2 июня 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
-  
-  Кандидатами на этот экзамен являются сертифицированные администраторы Microsoft 365 Enterprise, которые участвуют в оценке, планировании, переносе, развертывании и управлении службами Microsoft 365. Они выполняют задачи по управлению арендой в Microsoft 365 для организаций, в том числе управление идентификациями, безопасностью, соответствием стандартам и поддержкой технологий.
-  
-  Кандидаты должны знать рабочие пространства Microsoft 365 и должны иметь опыт администрирования хотя бы одного рабочего пространства Microsoft 365 (Exchange, SharePoint, Skype for Business, или Windows as a Service). Кандидаты должны обладать познаниями в проектировании сетей, серверном администрировании и основных понятиях IT, таких как DNS, активная директория и PowerShell.
+      
+  Кандидаты на этот экзамен являются Microsoft 365 Enterprise Administrators, принимающими участие в оценке, планировании, миграции, развертывании служб Microsoft 365 и управлении ими. Кандидаты на этот экзамен выполняют задачи управления клиентом Microsoft 365 для предприятия, включая задачи в отношении удостоверений, безопасности, обеспечения соответствия, Power Platform и поддерживающих технологий.
+
+  Кандидаты обладают рабочими знаниями рабочих нагрузок Microsoft 365 и опытом работы в роли администратора по крайней мере одной рабочей нагрузки Microsoft 365 (Exchange, SharePoint, Teams) и Windows как службы. Кандидаты также обладают рабочими знаниями сетей, администрирования серверов и основ IT, таких как DNS, Active Directory и PowerShell.
 subTitle: 'Этот экзамен предполагает проверку ваших способностей выполнять следующие технические задачи: проектирование и внедрение служб Microsoft 365; управление идентификацией и ролями пользователей; управление доступом и аутентификацией; и планирование рабочих пространств и приложений Office 365.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJVE
