--- a/learn-certs-pr/azure-solutions-architect-legacy.yml
+++ b/learn-certs-pr/azure-solutions-architect-legacy.yml
@@ -7,9 +7,7 @@ uid: certification.azure-solutions-architect-legacy
 certificationRenewalUid: renewal.azure-solutions-architect
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
-  Эта версия сертификации больше не доступна. Если вы обладаете этой версией сертификации, вам автоматически будет предоставлена последняя версия сертификата.
-  
-  Обе версии сертификации будут указаны в ваших сертификатах. Вам нужно только обновить более новую версию. Когда срок действия предыдущей версии истечет, она переместится в раздел истории сертификации вашей выписке об успеваемости.
+  <div><font color="#D83B01"><strong>Эта версия сертификации больше не доступна. Если вы обладаете этой версией сертификации, вам автоматически будет предоставлена последняя версия сертификата.<br/><br/>  Обе версии сертификации будут указаны в ваших сертификатах. Вам нужно только обновить более новую версию. Когда срок действия предыдущей версии истечет, она переместится в раздел истории сертификации вашей выписке об успеваемости.<br/><br/></strong></font></div>
   
   Кандидаты на сертификацию эксперта по архитектуре Azure Solutions Architect Expert должны обладать специальными знаниями в области разработки и реализации решений, работающих на Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранение и безопасность. У кандидатов должны быть навыки среднего уровня по администрированию Azure. Кандидаты должны понимать разработку в Azure и процессы DevOps.
 
