--- a/learn-certs-pr/d365-functional-consultant-field-service-legacy.yml
+++ b/learn-certs-pr/d365-functional-consultant-field-service-legacy.yml
@@ -7,9 +7,7 @@ uid: certification.d365-functional-consultant-field-service-legacy
 certificationRenewalUid: renewal.d365-functional-consultant-field-service
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  Эта версия сертификации больше не доступна. Если вы обладаете этой версией сертификации, вам автоматически будет предоставлена последняя версия сертификата.
-  
-  Обе версии сертификации будут указаны в ваших сертификатах. Вам нужно только обновить более новую версию. Когда срок действия предыдущей версии истечет, она переместится в раздел истории сертификации вашей выписке об успеваемости.
+  <div><font color="#D83B01"><strong>Эта версия сертификации больше не доступна. Если вы обладаете этой версией сертификации, вам автоматически будет предоставлена последняя версия сертификата.<br/><br/>  Обе версии сертификации будут указаны в ваших сертификатах. Вам нужно только обновить более новую версию. Когда срок действия предыдущей версии истечет, она переместится в раздел истории сертификации вашей выписке об успеваемости.<br/><br/></strong></font></div>
   
   Если вы консультант по функциональным возможностям, отвечающий за настройку и реализацию решений Dynamics 365 для клиентов, эта сертификация отлично вам подходит&#58; она может подчеркнуть ваши навыки и помочь с карьерным ростом. Консультант по функциональным возможностям Dynamics 365 Field Service отвечает за реализацию решений для управления ресурсами, осуществляющими жизненный цикл выездного обслуживания. Являясь консультантом по функциональным возможностям, вы знаете, как работать с руководителями проектов, разработчиками и архитекторами решений. У вас должно быть минимум от одного до трех лет опыта работы в качестве консультанта по функциональным возможностям, реализующего Dynamics 365.
   
