--- a/learn-certs-pr/azure-administrator-legacy.yml
+++ b/learn-certs-pr/azure-administrator-legacy.yml
@@ -7,9 +7,7 @@ uid: certification.azure-administrator-legacy
 certificationRenewalUid: renewal.azure-administrator
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  Эта версия сертификации больше не доступна. Если вы обладаете этой версией сертификации, вам автоматически будет предоставлена последняя версия сертификата.
-  
-  Обе версии сертификации будут указаны в ваших сертификатах. Вам нужно только обновить более новую версию. Когда срок действия предыдущей версии истечет, она переместится в раздел истории сертификации вашей выписке об успеваемости.
+  <div><font color="#D83B01"><strong>Эта версия сертификации больше не доступна. Если вы обладаете этой версией сертификации, вам автоматически будет предоставлена последняя версия сертификата.<br/><br/>  Обе версии сертификации будут указаны в ваших сертификатах. Вам нужно только обновить более новую версию. Когда срок действия предыдущей версии истечет, она переместится в раздел истории сертификации вашей выписке об успеваемости.<br/><br/></strong></font></div>
   
   Кандидаты на сертификацию администратора Azure Administrator Associate должны обладать специальными знаниями по внедрению, управлению и мониторингу среды Microsoft Azure в организации.
 
