--- a/learn-certs-pr/d365-functional-consultant-customer-service-legacy.yml
+++ b/learn-certs-pr/d365-functional-consultant-customer-service-legacy.yml
@@ -7,9 +7,7 @@ uid: certification.d365-functional-consultant-customer-service-legacy
 certificationRenewalUid: renewal.d365-functional-consultant-customer-service
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  Эта версия сертификации больше не доступна. Если вы обладаете этой версией сертификации, вам автоматически будет предоставлена последняя версия сертификата.
-  
-  Обе версии сертификации будут указаны в ваших сертификатах. Вам нужно только обновить более новую версию. Когда срок действия предыдущей версии истечет, она переместится в раздел истории сертификации вашей выписке об успеваемости.
+  <div><font color="#D83B01"><strong>Эта версия сертификации больше не доступна. Если вы обладаете этой версией сертификации, вам автоматически будет предоставлена последняя версия сертификата.<br/><br/>  Обе версии сертификации будут указаны в ваших сертификатах. Вам нужно только обновить более новую версию. Когда срок действия предыдущей версии истечет, она переместится в раздел истории сертификации вашей выписке об успеваемости.<br/><br/></strong></font></div>
   
   Если вы консультант по функциональным возможностям, отвечающий за настройку и реализацию решений Dynamics 365 для клиентов, вы можете использовать эту сертификацию, чтобы подчеркнуть свои навыки и продвинуться по карьерной лестнице. Консультант по функциональным возможностям Dynamics 365 Customer Service реализует многоканальные решения, ориентированные на обслуживание, качество, надежность, эффективность и удовлетворенность клиентов. Являясь консультантом по функциональным возможностям, вы знаете, как работать с руководителями проектов, разработчиками и архитекторами решений. У вас должно быть минимум от одного до трех лет опыта работы в качестве консультанта по функциональным возможностям, реализующего Dynamics 365.
   
