--- a/learn-certs-pr/d365-functional-consultant-sales-legacy.yml
+++ b/learn-certs-pr/d365-functional-consultant-sales-legacy.yml
@@ -7,9 +7,7 @@ uid: certification.d365-functional-consultant-sales-legacy
 certificationRenewalUid: renewal.d365-functional-consultant-sales
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  Эта версия сертификации больше не доступна. Если вы обладаете этой версией сертификации, вам автоматически будет предоставлена последняя версия сертификата.
-  
-  Обе версии сертификации будут указаны в ваших сертификатах. Вам нужно только обновить более новую версию. Когда срок действия предыдущей версии истечет, она переместится в раздел истории сертификации вашей выписке об успеваемости.
+  <div><font color="#D83B01"><strong>Эта версия сертификации больше не доступна. Если вы обладаете этой версией сертификации, вам автоматически будет предоставлена последняя версия сертификата.<br/><br/>  Обе версии сертификации будут указаны в ваших сертификатах. Вам нужно только обновить более новую версию. Когда срок действия предыдущей версии истечет, она переместится в раздел истории сертификации вашей выписке об успеваемости.<br/><br/></strong></font></div>
   
   Если вы консультант по функциональным возможностям, специалист, работающий с Microsoft Dynamics 365 Sales, или разработчик, желающий отточить свои навыки консультирования, эта сертификация может дать толчок вашей карьере. Эта сертификация позволит вам более эффективно представлять себя для участия в проектах, а также поможет показать представителям вашей организации, что вы можете использовать Dynamics 365 Sales для повышения эффективности работы торгового персонала.
   
