--- a/learn-certs-pr/exams/ms-700.yml
+++ b/learn-certs-pr/exams/ms-700.yml
@@ -5,6 +5,7 @@ metadata:
   description: 'Exam MS-700: Managing Microsoft Teams'
 uid: exam.ms-700
 displayName: MS-700
+summary: |-
   <div><font color='red'><strong>Содержание этого экзамена будет обновлено 26 июля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
   
   Microsoft Teams Administrator [Администратор Microsoft Teams] настраивает, развертывает и управляет рабочими нагрузками Office 365 для Microsoft Teams, которые нацелены на эффективное и результативное сотрудничество и взаимодействие в корпоративной среде.
