--- a/learn-certs-pr/roles/security-engineer.yml
+++ b/learn-certs-pr/roles/security-engineer.yml
@@ -1,12 +1,12 @@
 ### YamlMime:Role 
-title: нженер по безопасности
+title: Инженер по безопасности
 metadata: 
-  title: нженер по безопасности
-  description: нженеры по безопасности внедр¤ют средства управлени¤ безопасностью и защиты от угроз, управл¤ют удостоверени¤ми и доступом, а также защищают данные, приложени¤ и сети.  
+  title: Инженер по безопасности
+  description: Инженеры по безопасности внедряют средства управления безопасностью и защиты от угроз, управляют удостоверениями и доступом, а также защищают данные, приложения и сети.  
 uid: role.security-engineer 
 summary: | 
-  нженеры по безопасности внедр¤ют средства управлени¤ безопасностью и защиты от угроз, управл¤ют удостоверени¤ми и доступом, а также защищают данные, приложени¤ и сети.
-subTitle: нженеры по безопасности внедр¤ют средства управлени¤ безопасностью и защиты от угроз, управл¤ют удостоверени¤ми и доступом, а также защищают данные, приложени¤ и сети.
+  Инженеры по безопасности внедряют средства управления безопасностью и защиты от угроз, управляют удостоверениями и доступом, а также защищают данные, приложения и сети.
+subTitle: Инженеры по безопасности внедряют средства управления безопасностью и защиты от угроз, управляют удостоверениями и доступом, а также защищают данные, приложения и сети.
 certificationPaths: 
 - title: Azure Security Engineer
   linkedInKeywords: Azure Security Engineer
@@ -66,12 +66,12 @@ certifications:
   requiredExams:
   - uid: exam.sc-400
 resources:
-- title: уководство по образовательным курсам и сертификаци¤м Microsoft 
-  description: зучите все сертификаты в кратком руководстве по обучению и сертификации.
+- title: Руководство по образовательным курсам и сертификациям Microsoft 
+  description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://aka.ms/TrainingCertDeck
-- title: Ѕуклет по образовательным курсам и сертификаци¤м 
-  description: ыберите свой путь к успеху с этим буклетом по образовательным курсам и сертификаци¤м.
+- title: Буклет по образовательным курсам и сертификациям 
+  description: ыберите свой путь к успеху с этим буклетом по образовательным курсам и сертификациям.
   href: https://aka.ms/traincertposter
-- title: ѕоддержка сертификационных
+- title: Поддержка сертификационных
   href: ../help.md
-  description: ѕолучить помощь через форум поддержки сертификации Microsoft ћодератор форума ответит в течение одного рабочего дн¤, с понедельника по п¤тницу.
+  description: Получить помощь через форум поддержки сертификации Microsoft модератор форума ответит в течение одного рабочего дня, с понедельника по п¤тницу.
